# bahamut-zero

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
alexander/: CMakeLists.txt
alexander/gui/: CMakeLists.txt  first_window.cpp  scene_object.cpp  scene_object.hpp
bahamut/: CMakeLists.txt
bahamut/exceptions/: arceus_exception.cpp  bad_result_exception.cpp  conditions_not_match_exception.cpp  unexpected_parameter_exception.cpp
bahamut/utils/: arceus_exception.cpp  bad_result_exception.cpp  conditions_not_match_exception.cpp  exception.hpp  unexpected_parameter_exception.cpp
bismarck/: CMakeLists.txt
bismarck/glad/: glad.c  glad.h
bismarck/materials/: all_materials.hpp  material.cpp  material.hpp  texture.cpp  texture.hpp  texture_material.cpp  texture_material.hpp
bismarck/shaders/: diffuse_shader.hpp  material.cpp  material.hpp  shader.cpp  shader.hpp
garuda/: CMakeLists.txt  garuda_gui.cpp  garuda_gui.hpp
garuda/garuda_utils/: file_loader.hpp  obj_loader.cpp  obj_loader.hpp
garuda/glad/: glad.c
garuda/imgui/: imgui_demo.cpp
garuda/renderable/: render_object.cpp  render_object.hpp  texture_object.cpp  texture_object.hpp  triangle_mesh.cpp  triangle_mesh.hpp  triangle_mesh_initialization.cpp  triangle_strip.cpp  triangle_strip.hpp
garuda/scene/: camera.hpp  light.hpp
moogle/: CMakeLists.txt
moogle/test_blas/: CMakeLists.txt  laplacian_rbf.cpp  poisson.cpp  rbf2.cpp  rbffd_test.cpp  test_fd.cpp
moogle/test_bounding_box/: CMakeLists.txt
moogle/test_cellgraph_imported/: CMakeLists.txt  cellgraph_temp.cpp  cellgraph_temp.hpp  import_cellgraph.cpp
moogle/test_geometry/: CMakeLists.txt  bbox.cpp  cube_tree.cpp  face_vertex_mesh.cpp  levelset.cpp
moogle/test_grid/: CMakeLists.txt  test_cellgraph.cpp  test_cellgraph3.cpp
moogle/test_houdini/: CMakeLists.txt
moogle/test_openvdb/: CMakeLists.txt  grid_creation.cpp  hello.cpp  hello_points.cpp  main.cpp
moogle/test_particles/: CMakeLists.txt  particles2.cpp  particles3.cpp
odin/: CMakeLists.txt
odin/blas/: polynomial.cpp  quintic_kernel.cpp  rbf_finite_difference.cpp  rbf_finite_difference.hpp
odin/interpolation/: interpolation_interface.hpp  rbf_interpolation.hpp  rbf_interpolation2.cpp
ramuh/: CMakeLists.txt
ramuh/geometry/: bounding_box.hpp  bounding_box_2.cpp  bounding_box_3.cpp  cube_tree.cpp  cube_tree.hpp  face_vertex_mesh.cpp  face_vertex_mesh.hpp  levelset.hpp  levelset_2.cpp
ramuh/grid/: cell_centered_grid.hpp  cell_centered_grid_2.cpp  cell_graph.hpp  cell_graph2.cpp  cell_graph2.hpp  cell_graph2_edge.cpp  cell_graph2_node.cpp  cell_graph2_vertex.hpp  cell_graph3.cpp  cell_graph3.hpp  cell_graph3_edge.cpp  cell_graph3_node.cpp  regular_grid.hpp
ramuh/particle/: particle_system.hpp  particle_system2.cpp  particle_system2.hpp  particle_system3.cpp  particle_system3.hpp
ramuh/ramuh_utils/: mesh_loader.cpp  mesh_loader.hpp
